--- a/views/users/counter.ejs
+++ b/views/users/counter.ejs
@@ -1,17 +1,17 @@
-<div class="container h-100 mt-5">
+<div class=" w-100 h-100 mt-4">
     <div class="d-flex justify-content-center h-100">
-        <div class="user_card ">
+        <div class="user_card bg-white">
           
-            <div class="text-danger text-center mt-5" >Next Game Will Start In</div>
+            <div class="text-danger text-center mb-4" ><h5><strong> Next Game Will Start In </strong></h5> </div>
                 <div class="row d-flex justify-content-around mt-3 ">
                     <div class="col-2  text-center p-2 rounded box1 ">
-                     <div class="text-danger mt-4 font-weight-bold"><h3>04</h3></div>
+                     <div class="text-danger mt-2 font-weight-bold"><h3>04</h3></div>
                     </div>
                     <div class="col-2  text-center p-2 rounded box1 ">
-                        <div class="text-danger mt-4 font-weight-bold"><h3>42</h3></div>
+                        <div class="text-danger mt-2  font-weight-bold"><h3>42</h3></div>
                        </div>
                        <div class="col-2  text-center p-2 rounded box1 ">
-                        <div class="text-danger mt-4 font-weight-bold"><h3>06</h3></div>
+                        <div class="text-danger mt-2 font-weight-bold"><h3>06</h3></div>
                        </div>
                   </div>
                   <div class="row d-flex justify-content-around ">
@@ -25,18 +25,11 @@
                         <div ><small class="font-weight-bold">Seconds</small></div>
                        </div>
                   </div>
-                  <div class="d-flex justify-content-center mt-2">
-                  <div class="d-flex justify-content-center mt-1 login_container">
-                    <button type="button" name="button" class="btn login_btn btn-success">START NOW</button>
+                  <div class="d-flex justify-content-center mt-5 login_container">
+                    <a href="/users/qes" name="button" class="shadow rounded btn login_btn btn-success">START NOW</a>
                   </div>
-                </div>
-
-                <div class="text-white text-center mt-5" >Account Balance : 30</div>
-                <div class="d-flex justify-content-center">
-                    <div class="d-flex justify-content-center mt-3 login_container">
-                      <button type="button" name="button" class="btn login_btn btn-warning">Reacharge Now</button>
-                    </div>
-                  </div>
+                  <strong><p class="text-center mt-5 text-muted">Wallet Balance : 20$</p></strong> 
+                </div> 
         </div>
     </div>
 </div>
