--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -1,4 +1,4 @@
-<div class="container h-100 mt-5">
+<div class=" h-100 mt-4">
     <div class="d-flex justify-content-center h-100">
         <div class="user_card ">
             <div class="d-flex justify-content-center">
@@ -33,7 +33,7 @@
                         </div>
                     </div>
                         <div class="d-flex justify-content-center mt-3 login_container">
-                 <button type="button" name="button" class="btn login_btn btn-success">Register</button>
+                 <a href="/users/counter" name="button" class="btn login_btn btn-success">Register</a>
                </div>
                 </form>
             </div>
